--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-   "generator:ts": "openapi-generator generate -i ./reference/books/books.yaml -g typescript-axios"
+   "generator:ts": "openapi-generator generate -i ./reference/books/books.yaml -g typescript-axios -o ./client/generated",
+   "generator:java": "openapi-generator generate -i ./reference/books/books.yaml -g spring -o ./server/generated"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^1.0.1-4.1.3"
