--- a/reference/external/openBd.yaml
+++ b/reference/external/openBd.yaml
@@ -11,7 +11,7 @@ servers:
 # host: "https://api.openbd.jp/"
 # basePath: "v1"
 tags:
-  - name: "default"
+  - name: "openBd"
     description: "ドキュメントルート"
 paths:
   /get:
