--- a/reference/paths/books-by-isbn.yaml
+++ b/reference/paths/books-by-isbn.yaml
@@ -1,29 +1,4 @@
-openapi: 3.0.0
-info:
-  title: books
-  version: '1.0'
-  description: ''
-servers:
-  - url: 'https://localhost:8080/api/v1'
-paths:
-  /books:
-    get:
-      summary: 本を検索する
-      tags: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  books:
-                    anyOf:
-                      - type: array
-                        items: {}
-                      - $ref: ./models/books.v1.yaml
-    parameters: []
+isbn:
   '/books/{isbn}':
     parameters:
       - name: isbn
@@ -57,7 +32,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: ./models/bookaction.v1.yaml
+              $ref: ./difinitions/bookaction.v1.yaml
             examples:
               borrow:
                 value:
@@ -70,5 +45,3 @@ paths:
         description: パラメータのISBNの
       description: ''
       parameters: []
-components:
-  schemas: {}
