--- a/reference/paths/books-by-isbn.yaml
+++ b/reference/paths/books-by-isbn.yaml
@@ -18,6 +18,7 @@ isbn:
       responses:
         '501':
           description: Not Implemented
+actions:
   '/books/{isbn}/actions':
     parameters:
       - name: isbn
