--- a/reference/paths/books.yaml
+++ b/reference/paths/books.yaml
@@ -1,7 +1,7 @@
 books:
-  tags:
-    - books
   get:
+    tags:
+      - books
     summary: 本を検索する
     responses:
       '200':
@@ -17,3 +17,53 @@ books:
                       items: {}
                     - $ref: ./difinitions/books.v1.yaml
   parameters: []
+isbn:
+  parameters:
+    - name: isbn
+      in: path
+      required: true
+      schema:
+        type: string
+      description: ''
+  put:
+    tags:
+      - books
+    summary: 本を登録する
+    responses:
+      '501':
+        description: Not Implemented
+    description: ''
+  delete:
+    summary: ''
+    responses:
+      '501':
+        description: Not Implemented
+actions:
+  '/books/{isbn}/actions':
+    parameters:
+      - name: isbn
+        in: path
+        required: true
+    post:
+      summary: 本に対する行動
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: ./difinitions/bookaction.v1.yaml
+            examples:
+              borrow:
+                value:
+                  type: borrow
+                  userId: '1234567'
+              return:
+                value:
+                  type: return
+                  userId: '1234567'
+        description: パラメータのISBNの
+      description: ''
+      parameters: []
+
