--- a/reference/index.yaml
+++ b/reference/index.yaml
@@ -1,22 +1,17 @@
 openapi: 3.0.0
 info:
-  title: books
+  title: libraryApplication
   version: 1.0.0
-  description: ''
+  description: '図書館アプリのライブラリ'
 servers:
   - url: 'http://localhost:8080/api/v1'
-tags:
-  - name: books
-    description: ""
-  - name: lendingRecords
-    description: ""
-  - name: users
-    description: ""
-  - name: openBd
+    description: local Server
+  - url: 'https://enigmatic-depths-14464.herokuapp.com/api/v1'
+    description: Main Server
 paths:
   /books:
     $ref: './paths/books.yaml#/books'
   '/books/{isbn}':
     $ref: './paths/books.yaml#/isbn'
-  /books-by-actions:
+  '/books/{isbn}/actions':
     $ref: './paths/books.yaml#/actions'
