--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "scripts": {
-    "generator": "openapi-generator generate --help ",
-    "generator:t": "openapi-generator generate -i ./reference/external/openBd.yaml -g typescript-axios -o ./client/generated --api-package external",
-    "pet": "openapi-generator generate -i reference/paths/petstore.yaml -g typescript-axios -o ./client/generated --api-package external",
-    "gen": "openapi-generator generate -i reference/index.yaml -g typescript-axios -o ./client/generated --api-package external",
-
-
-
-
-
-   "generator:ts": "openapi-generator generate -i ./reference/external/openBd.yaml -g typescript-axios -o ./client/generated",
-   "generator:java": "openapi-generator generate -i reference/paths/books.yaml -g spring -o ./server/generated"
+    "generate": "run-p generate:ts generate:java",
+    "generateAll": "run-p generate:*",
+    "generate:ts": "openapi-generator generate -i ./reference/index.yaml -g typescript-axios -o ./client/generated",
+    "generate:java": "openapi-generator generate -i ./reference/index.yaml -g spring -o ./server/generated",
+    "generate:external": "openapi-generator generate -i ./reference/external/openBd.yaml -g typescript-axios -o ./client/generated/external"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^1.0.1-4.1.3"
+    "@openapitools/openapi-generator-cli": "^1.0.1-4.1.3",
+    "npm-run-all": "^4.1.5"
   }
 }
-
-
